--- a/home/wiki/App/Search.html
+++ b/home/wiki/App/Search.html
@@ -5,7 +5,7 @@
   <title>App/Search - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .symbol-col {
     text-align:center;
   }
@@ -30,7 +30,7 @@
     font-weight: bold;
   }
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .symbol-col {
     text-align:center;
   }
@@ -601,7 +601,7 @@
         <b>Configure PageRank</b>: See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_3" title="Options/Search">Options/Search</a>
       </li>
       <li>
-        <b>Configure Address bar autocomplete</b>: See <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_4" title="Options/Search suggest">Options/Search_suggest</a>
+        <b>Configure Address bar autocomplete</b>: See <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_4" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
     </ul>
   
