--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -30,7 +30,7 @@
       <b>Wikidata</b>: If you are want to see interlanguage wiki links in XOWA, it is recommended that you also set up Wikidata. See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_5" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
     </p>
     <p>
-      <b>Options</b>: If you want to configure options related to the data dump import, see <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_6" title="Options/Import">Options/Import</a>
+      <b>Options</b>: If you want to configure options related to the data dump import, see <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_6" title="Options/Import" class="xowa-visited">Options/Import</a>
     </p>
     <p>
       <b>Removal</b>: If you want to remove a wiki, see <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_7" title="App/Import/Removal">App/Import/Removal</a>
