--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -5,7 +5,7 @@
   <title>Dashboard/Wiki maintenance - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,10 +17,10 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .cell_center {text-align:center;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -32,7 +32,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .cell_center {text-align:center;}
 </style>
 
@@ -508,7 +508,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-05-02
+          2016-06-02
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -997,7 +997,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-05-01
+          2016-06-01
         </td>
         <td class='cell_center'>
           2016-03-05
