--- a/home/wiki/Dev/Design/Database.html
+++ b/home/wiki/Dev/Design/Database.html
@@ -87,7 +87,7 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      General behavior for "single" vs "multiple" file import can be customized at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_2" title="Options/Import">Options/Import</a> under Database Layout
+      General behavior for "single" vs "multiple" file import can be customized at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_2" title="Options/Import" class="xowa-visited">Options/Import</a> under Database Layout
     </p>
     <h2>
       <span class="mw-headline" id="Multi-file_layout">Multi-file layout</span>
