--- a/home/wiki/Dev/File/Setup/Linux.html
+++ b/home/wiki/Dev/File/Setup/Linux.html
@@ -30,7 +30,7 @@
       update xowa config&nbsp;⊗
     </div>
     <p>
-      . You can also configure this option at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_2" title="Options/Files">Options/Files</a>
+      . You can also configure this option at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_2" title="Options/Files" class="xowa-visited">Options/Files</a>
     </p> 
     <p>
       For more information about the config, see the section below.
