--- a/home/wiki/Dev/File/Setup/Mac_OS_X.html
+++ b/home/wiki/Dev/File/Setup/Mac_OS_X.html
@@ -39,7 +39,7 @@
     </p>
     <ul>
       <li>
-        Navigate to <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_2" title="Options/Files">Options/Files</a> and check "Download enabled"
+        Navigate to <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_2" title="Options/Files" class="xowa-visited">Options/Files</a> and check "Download enabled"
       </li>
       <li>
         Restart XOWA and navigate to any page. Any images will be downloaded automatically.
