--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -5,13 +5,13 @@
   <title>Help/About - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .component_category {
   font-weight:bold;
   font-size:large;
 }
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .component_category {
   font-weight:bold;
   font-size:large;
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-05-23 04:27
+          2016-06-09 19:07
         </td>
       </tr>
       <tr>
