--- a/home/wiki/Help/FAQs.html
+++ b/home/wiki/Help/FAQs.html
@@ -66,7 +66,7 @@
       <span class="mw-headline" id="Why_are_language_links_to_other_wikis_not_listed.3F">Why are language links to other wikis not listed?</span>
     </h2>
     <p>
-      Short answer: Set up the Wikidata wiki (www.wikidata.org). See <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_3" title="Dashboard/Import/Online">Dashboard/Import/Online</a>. After you install the Wikidata wiki, language links to other wikis will be listed at the bottom of the article.
+      Short answer: Set up the Wikidata wiki (www.wikidata.org). See <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_3" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>. After you install the Wikidata wiki, language links to other wikis will be listed at the bottom of the article.
     </p>
     <p>
       Long answer: See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_4" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
