--- a/home/wiki/Help/Privacy/Desktop.html
+++ b/home/wiki/Help/Privacy/Desktop.html
@@ -5,14 +5,14 @@
   <title>Help/Privacy/Desktop - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
   ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
   .bold      {font-weight: 900;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
@@ -171,7 +171,7 @@
       File download is disabled by default. All files are downloaded to the following directory: <code>/xowa/file</code>.
     </p>
     <p>
-      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files">Options/Files</a>
+      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files" class="xowa-visited">Options/Files</a>
     </p>
     <h2>
       <span class="mw-headline" id="Math_images_.28LaTEX_only.29">Math images (LaT<sub>E</sub>X only)</span>
