--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -24,7 +24,7 @@
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
     </p>
     <ul>
       <li>
@@ -38,7 +38,7 @@
       <span class="mw-headline" id="Import_offline_by_script">Import offline by script</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline">Import offline</a> page can generate a script that will import a wiki.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
     </p>
     <ul>
       <li>
