--- a/home/wiki/App/Import/Manual.html
+++ b/home/wiki/App/Import/Manual.html
@@ -21,7 +21,7 @@
       <span class="mw-headline" id="Reasons_for_manual_import">Reasons for manual import</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">list of data dumps</a> allows you to download dumps for any wiki with one mouse click. However, there are times when you want to manually import a wiki:
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">list of data dumps</a> allows you to download dumps for any wiki with one mouse click. However, there are times when you want to manually import a wiki:
     </p>
     <ul>
       <li>
