--- a/home/wiki/App/Import/Offline.html
+++ b/home/wiki/App/Import/Offline.html
@@ -21,15 +21,15 @@
       If you've downloaded a dump already, you can import the .bz2 file into XOWA.
     </p>
     <h2>
-      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOffline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a></span>
+      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOffline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a></span>
     </h2>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOnline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online">Dashboard/Import/Online</a></span>
+      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOnline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a></span>
     </h2>
     <ul>
       <li>
@@ -43,7 +43,7 @@
     </ul>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online">Dashboard/Import/Online</a> and click on the "latest" link.
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> and click on the "latest" link.
       </li>
     </ul>
     <ul>
