--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -549,7 +549,7 @@
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window">Options/Window</a>
+        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -845,7 +845,7 @@
     </p>
     <ul>
       <li>
-        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window">Options/Window</a> [broken since:v2.8.5]
+        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window" class="xowa-visited">Options/Window</a> [broken since:v2.8.5]
       </li>
     </ul>
     <p>
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1416,7 +1416,7 @@
     </p>
     <ul>
       <li>
-        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import">Options/Import</a> [broken since:v2.7.3.1]
+        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.7.3.1]
       </li>
     </ul>
     <h2>
@@ -1441,7 +1441,7 @@
         Edit: Fix missing edit-toolbar.js b/c of broken path {detected by gnosygnu.gui}. [broken since:v1.10.2]
       </li>
       <li>
-        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import">Options/Import</a> [broken since:v2.4.1]
+        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.4.1]
       </li>
       <li>
         HttpServer: Fix wrong Main Page when clicking on wiki in sidebar; EX:click on zh.w in sidebar -&gt; Wikipedia:首页 x&gt; Main_Page {detected by anonymous4}. [broken since:v2.7.2]
@@ -1611,7 +1611,7 @@
         Gui.Status: Default to showing full url, not shortened one; EX:"home/wiki/Main_Page" not "home/Main_Page" {detected by pirate}.
       </li>
       <li>
-        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window">Options/Window</a>
+        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -1885,7 +1885,7 @@
         File: Show File page if clicking on image without commons while offline (using nearest sized image). See: <a href="https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg</a>
       </li>
       <li>
-        File: Create new caching system. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_35" title="Options/Files">Options/Files</a>
+        File: Create new caching system. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_35" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         Doc: Document command-line build for generating image databases. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Thumbs.html" id="xolnki_36" title="Dev/Command-line/Thumbs">Dev/Command-line/Thumbs</a>
@@ -1926,7 +1926,7 @@
     </p>
     <ul>
       <li>
-        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window">Options/Window</a>
+        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -2067,7 +2067,7 @@
     </p>
     <ul>
       <li>
-        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window">Options/Window</a>
+        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         Gui: Reduce page load errors due to popups (affects page sometimes loading incorrectly when popup is also loading); EX:hover over link and middle-click on it {detected by gnosygnu.gui}. See: <a href="https://en.wikipedia.org/wiki/Mark_Rolston" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mark_Rolston</a> (See [[Private Mark Drake]] link)
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
@@ -2924,7 +2924,7 @@
     </p>
     <ul>
       <li>
-        File: Change default for Files Retrieval to true (affects images not loading if user forgets to change default). See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_52" title="Options/Files">Options/Files</a>
+        File: Change default for Files Retrieval to true (affects images not loading if user forgets to change default). See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_52" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         Parser.Template: Ignore safesubst for IsSubsting (affects 1 en.w page failing to load with stack overflow error). See: <a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture</a>
