--- a/home/wiki/Dashboard/Import/Offline.html
+++ b/home/wiki/Dashboard/Import/Offline.html
@@ -5,7 +5,7 @@
   <title>Dashboard/Import/Offline - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -927,7 +927,7 @@
       </p>
       <ul>
         <li>
-          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_3" title="Options/Import">Options/Import</a>
+          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_3" title="Options/Import" class="xowa-visited">Options/Import</a>
         </li>
         <li>
           Choose the wiki you wish to install.
@@ -1044,7 +1044,7 @@
       </h4>
       <ul>
         <li>
-          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import">Options/Import</a>
+          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import" class="xowa-visited">Options/Import</a>
         </li>
         <li>
           Choose the wiki you wish to install. 
