--- a/home/wiki/Dev/Design/Offline_files.html
+++ b/home/wiki/Dev/Design/Offline_files.html
@@ -42,7 +42,7 @@
     </p>
     <ul>
       <li>
-        <code>[ 50 GB; 03 h]</code> Import the Commons wiki with category level 2. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <code>[ 50 GB; 03 h]</code> Import the Commons wiki with category level 2. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         <code>[ 50 GB; 02 h]</code> Download and unzip commonswiki-latest-image.sql.gz
