--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -157,7 +157,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -166,7 +166,7 @@
     <hr>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
       </li>
     </ul>
     <h2>
@@ -235,7 +235,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -291,7 +291,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_28" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_28" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 827 known Wikimedia Foundation wikis
@@ -299,7 +299,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_29" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_29" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
