--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -5,7 +5,7 @@
   <title>Options - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .optionsButton
 {
     width: 100px;
@@ -108,14 +108,14 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
   ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
   .bold      {font-weight: 900;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -127,7 +127,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .optionsButton
 {
     width: 100px;
@@ -218,7 +218,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
@@ -322,7 +322,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -396,7 +396,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_10" title="Options/Import">Import</a>
+              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_10" title="Options/Import" class="xowa-visited">Import</a>
             </td>
             <td>
               Import options
@@ -404,7 +404,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_11" title="Options/Files">Files</a>
+              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_11" title="Options/Files" class="xowa-visited">Files</a>
             </td>
             <td>
               File / image options
@@ -425,7 +425,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_13" title="Options/HTML">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_13" title="Options/HTML" class="xowa-visited">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -454,7 +454,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_16" title="Options/Content apps">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_16" title="Options/Content apps" class="xowa-visited">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
@@ -470,7 +470,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_18" title="Options/HTTP server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_18" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -483,7 +483,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_19" title="Options/Search suggest">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_19" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
