--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -5,7 +5,7 @@
   <title>Options/Files - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa">
+  <style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .optionsButton
 {
     width: 100px;
@@ -108,7 +108,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -120,7 +120,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style data-source="xowa">
+<style data-source="xowa" type="text/css">
 .optionsButton
 {
     width: 100px;
@@ -357,8 +357,8 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 3.630 MB
-file count: 181
+space used: 117.094 KB
+file count: 43
 oldest file: 2016-03-31 20:42:31
 </textarea>
             </td>
